--- a/scri.css
+++ b/scri.css
@@ -129,7 +129,7 @@ body {
 }
 
 body {
-    background-image: url('doctor.jpg'); /* Replace with your image URL */
+    background-image: url("doctor.jpg"); /* Replace with your image URL */
     background-size: cover; /* Ensure the image covers the entire screen */
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Prevent repetition */
