--- a/scri.css
+++ b/scri.css
@@ -3,7 +3,7 @@
   border: solid 1px #8d8d8d;
   padding: 20px;
   border-radius: 10px;
-  background-color: #fff;
+  background-color: transparent;
   max-width: 400px;
   margin: 50px auto;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
