--- a/scri.css
+++ b/scri.css
@@ -3,11 +3,12 @@
   border: solid 1px #8d8d8d; /* Border color */
   padding: 20px;
   border-radius: 10px;
-  background-color: rgba(255, 255, 255, 0); /* Fully transparent background */
+  background-color: transparent; /* Fully transparent background */
   max-width: 400px;
   margin: 50px auto;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow */
 }
+
 
 
 /* Heading styling */
